--- a/order-service.properties
+++ b/order-service.properties
@@ -5,4 +5,5 @@ spring.jpa.show-sql=true
 
 
 #DataSource Properties
+spring.datasource.url=jdbc:mysql://localhost:3306/orderservice
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
