--- a/order-service.properties
+++ b/order-service.properties
@@ -7,3 +7,6 @@ spring.jpa.show-sql=true
 #DataSource Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/orderservice
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
