--- a/order-service.properties
+++ b/order-service.properties
@@ -1,12 +1,12 @@
 #JPA Properties
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
 #DataSource Properties
-#spring.datasource.url=jdbc:mysql://localhost:3306/orderservice
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/orderservice
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.datasource.initialization-mode=always
-#spring.sql.init.mode=always
+spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
